Fix spacing

--- a/velo-b/public/css/map.css
+++ b/velo-b/public/css/map.css
@@ -7,8 +7,7 @@
 }
 
 #map-large{
-    
-    min-height: 30rem;
+    min-height: 28rem;
     min-width: 45rem;
     border: .3rem solid gray;
     border-radius: .5rem;
